SUBDIRS = \
Amber_IsoPropanol \
Amber_Villin \
Au_Cu_Switch \
AVB1_Methane \
Benzene_AA_autofit \
Catlow_Zeolite_4a \
Charmm19_ubiquitin \
Charmm27_benzene \
Charmm27_NA \
Charmm22_Ethanethiol \
Charmm27_Heme \
Charmm27_Polyalanine \
Compass_Methanol \
Convert \
Cu_Pb_EAM \
Cu_VLE \
DFT_Field \
Dick1994_PETN \
DREIDING \
Dubb_Zeolite \
Energy_Biasing \
EPM_VLCC \
FENE_Hexamer \
Formamide_Scaled \
Fris_Walls \
Gordon \
Gromos_Isobutane \
Gromos_Methylpropylsulfide \
Hard_Sphere \
Henry_Law \
Histogram \
Ideal_Chain \
MM2_Ethane \
NaCl_1x1x1 \
OPLS_Propanamide \
Parallel_Test \
Potter_CF2H2 \
Shukla_Gasses \
SKS_Pentane \
Small_Peptide \
Solid_LJium \
SMMKmain_2244688nonane \
SMMKnaip_Ethylpentane \
Square_Well_Chain \
Steele_Wall \
TraPPE_Isomers \
TraPPE_Molecules \
TraPPE_Pentane \
Triglycerol \
TMMC \
uVT_Ethane \
UFF \
Vink2001_Silicon \
VLCC_Fit \
Wall_Water \
Walt2001_Nanotube \
Weiner1984
EXTRA_DIST = \
do_test \
do_para_diff \
reset_files \
reset_new_to_current \
run_serial_test \
run_para_diff \
run_para_test 
